- added update functionality
