# sheazuzu/src/controller/controller.go
@@ -1,15 +1,21 @@
 package controller
 
 import (
+	"context"
 	"encoding/json"
+	"fmt"
 	"go.uber.org/zap"
 	"net/http"
 	verrors "sheazuzu/common/src/errors"
+	"sheazuzu/common/src/logging"
+	"sheazuzu/common/src/tracing"
+	"sheazuzu/common/src/utils"
 	"sheazuzu/sheazuzu/src/generated/sheazuzu"
 )
 
 type sheazuzuService interface {
 	FindMatchDataById(int) (sheazuzu.MatchData, error)
+	UpdateMatchData(data sheazuzu.MatchData) (string, int, error)
 }
 
 type Controller struct {
@@ -42,8 +48,29 @@ func (controller *Controller) AllMatchDataUsingGET(w http.ResponseWriter, r *htt
 	panic("hello world")
 }
 
-func (controller *Controller) UploadUsingPOST(w http.ResponseWriter, r *http.Request) {
-	panic("hello world")
+func (controller *Controller) UploadMatchDataUsingPOST(w http.ResponseWriter, r *http.Request) {
+	op := verrors.Op("controller: GetFindMachine")
+
+	ctx := r.Context()
+
+	var requestBody sheazuzu.MatchData
+	err := json.NewDecoder(r.Body).Decode(&requestBody)
+	if err != nil {
+		msg := "Invalid request body"
+		handleError(ctx, w, verrors.E(op, verrors.HttpBadRequest, err, msg), msg)
+		return
+	}
+
+	msg, id, err := controller.service.UpdateMatchData(requestBody)
+	if err != nil {
+		writeErrorResponse(w, op, err, "error updating MatchData", controller.logger)
+		return
+	}
+
+	_ = json.NewEncoder(w).Encode(sheazuzu.UpdateResponse{
+		MatchID: utils.ToIntPtr(id),
+		Message: utils.ToStringPtr(msg),
+	})
 }
 
 func writeErrorResponse(writer http.ResponseWriter, op verrors.Op, err error, details string, logger *zap.SugaredLogger) {
@@ -65,4 +92,28 @@ func writeErrorResponse(writer http.ResponseWriter, op verrors.Op, err error, de
 		"details", details,
 		"statusCode", statusCode,
 		"errorCode", errorCode)
+}
+
+func handleError(ctx context.Context, writer http.ResponseWriter, err error, message string) {
+
+	statusCode := verrors.HttpErrorCodeFromError(err)
+	writer.WriteHeader(statusCode)
+	errorCode := verrors.GetErrorCode(err)
+
+	if statusCode == http.StatusNoContent {
+		return // NoContent 204 doesn't have a response body
+	}
+
+	logging.ContextLogger(ctx).Errorw(err.Error(), "statusCode", statusCode, "errorCode", errorCode)
+
+	_ = json.NewEncoder(writer).Encode(
+		sheazuzu.ErrorResponse{
+			Code:    utils.ToInt32Ptr(errorCode),
+			Name:    utils.ToStringPtr(http.StatusText(statusCode)),
+			Message: utils.ToStringPtrOrNil(message),
+			Details: &[]string{
+				fmt.Sprintf("TraceID: %s", tracing.TraceId(ctx)),
+			},
+		},
+	)
 }
